styles/style.css
@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";

html, body { 
    height: 100%; 
    margin: 0; 
    padding: 0;
}
#map { 
    height: 100%;
}
.main-content {
    width: 100%;
}
.header {
    background-color: #444040;
    height: 60px!important;
    width: 100%;
}
.sidebar-head-text {
    text-align: center;
    color: whitesmoke;
}
.wrapper {
    display: flex;
    align-items: stretch;
}  
#sidebar {
    min-width: 250px;
    max-width: 250px;
    background-color: black;
    height: 100%;
    transition: all 0.3s;
    min-height: 100vh;
    overflow-y: scroll;
}
#sidebar .sidebar-header {
    background: black;
}
#sidebar.active {
    margin-left: -250px;
}
#sidebar ul.components {
    padding: 20px 0;
    border-bottom: 1px solid #47748b;
}
#sidebar ul li a {
    padding: 10px;
    font-size: 1.1em;
    display: block;
    color: #bbb6b6;
}
#sidebar ul li a:hover {
    color: #7386D5;
    background: #fff;
}
#sidebar ul li.active > a, a[aria-expanded="true"] {
    color: #fff;
    background: #6d7fcc;
}
ul ul a {
    font-size: 0.9em !important;
    padding-left: 30px !important;
    background: #6d7fcc;
}
@media (max-width: 768px) {
    #sidebar {
        margin-left: -250px;
    }
    #sidebar.active {
        margin-left: 0;
    }
}
.bar1, .bar2, .bar3 {
    width: 35px;
    height: 5px;
    background-color: rgb(245, 239, 239);
    margin: 6px 0;
    transition: 0.4s;
}
.sidebarIcon {
    padding-top: 9px;
    padding-left: 25px;
}
.search {
    width: 75%
}
.filter {
    width: 23%
}

